fix the spacing of stuff in footnote

--- a/src/styles.css
+++ b/src/styles.css
@@ -108,7 +108,7 @@
 
 .Footnote .Text {
     margin-left: 5%;
-    margin-top: 10px;
+    margin-top: 25px;
     color: white;
 }
 
@@ -143,7 +143,7 @@
 
 .Login {
     float: right;
-    margin-top: -40px;
+    margin-top: -75px;
     text-align: center;
     margin-right: 5%;
 }
